<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="vertical">
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-8100413825150401/2568606176">
                </com.google.android.gms.ads.AdView>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_intro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="36sp"
                tools:text="@string/intro1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="372dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp"
                tools:text="@string/intro2" />

            <TextView
                android:id="@+id/txt_intro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp"
                tools:text="@string/intro3" />

            <TextView
                android:id="@+id/txt_intro4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="30sp"
                tools:text="@string/intro4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_get_item"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:text="@string/happyclick"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>